; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/backlight/extr_backlight.c_backlight_level.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/backlight/extr_backlight.c_backlight_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32 }

@BACKLIGHT_LEVELS = common dso_local global i64 0, align 8
@backlight_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @backlight_level(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @BACKLIGHT_LEVELS, align 8
  %5 = icmp sgt i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i64, i64* @BACKLIGHT_LEVELS, align 8
  store i64 %7, i64* %2, align 8
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i64, i64* %2, align 8
  store i64 %9, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 1), align 8
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 1), align 8
  %11 = icmp ne i64 %10, 0
  %12 = xor i1 %11, true
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 0), align 8
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 2), align 8
  %16 = call i32 @eeconfig_update_backlight(i32 %15)
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 1), align 8
  %18 = call i32 @backlight_set(i64 %17)
  ret void
}

declare dso_local i32 @eeconfig_update_backlight(i32) #1

declare dso_local i32 @backlight_set(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
